TAG: nomenload-6-0-22-4
TAG: nomenload-6-0-22-3
DATE: 09/21/2023, 10/12/2023
STAFF: lec
wts2-1282/fl2-545/fl2-576/nomenclature/mapping created duplicate MGI:xxx
bin/nomenload.py:    db.sql('select * from ACC_setMax (%d)' % (lineNum), None)
mgiCount needs to be updated if Allele is also created

TAG: nomenload-6-0-22-2
TAG: nomenload-6-0-22-1
DATE: 07/28/2022, 08/03/2022
STAFF: lec
wts2-761/MGD db cleanup - MRK_Event/MRK_EventReason
#       modified:   bin/batchrename.py

TAG: nomenload-6-0-18-1
DATE: 02/21/2022
STAFF: lec
wts2-767/mgi_notechunk/mgi_note merge + autosequence

TAG: nomenload-6-0-16-8
TAG: nomenload-6-0-16-7
DATE: 07/16/2021
STAFF: lec
CHANGES:
WTS2-667/auto-sequence mld_expt_marker.assoc_key

TAG: nomenload-6-0-16-6
TAG: nomenload-6-0-16-5
TAG: nomenload-6-0-16-4
TAG: nomenload-6-0-16-3
DATE: 04/14/2021
STAFF: lec
CHANGES:
WTS2-480/added Batch Rename

TAG: nomenload-6-0-16-2
DATE: 10/23/2020
STAFF: lec
CHANGES:
TR13425/nomenload/new allele/autocomplete

TAG: nomenload-6-0-14-2
TAG: nomenload-6-0-14-1
DATE: 04/03/2019, 05/13/2019
STAFF: lec 
TR12963/teleuse-to-mgd_java_api
add autosequence logic to nomenload.py

TAG: nomenload-6-0-12-3
DATE: 08/01/2018
STAFF: lec 
CHANGES: remove ${LOG} file nomenload.sh

TAG: nomenload-6-0-12-2
DATE: 05/22/2018
STAFF: lec 
CHANGES: move dos2unix below LASTRUN check

TAG: nomenload-6-0-12-1
DATE: 03/07/2018
STAFF: lec 
CHANGES: TR12662/GMC project

TAG: nomenload-6-0-11-6
DATE: 01/04/2018
STAFF: sc
CHANGES: TR12599 - add dos2unix to convert input file

TAG: nomenload-6-0-11-5
DATE: 12/04/2017
STAFF: lec
CHANGES:
removed ${OUTPUTDIR} from "rm -rf"

TAG: nomenload-6-0-11-4
TAG: nomenload-6-0-11-3
TAG: nomenload-6-0-11-2
TAG: nomenload-6-0-11-1
DATE: 11/01/2017,11/29/2017
STAFF: lec 
CHANGES: 
1) TR12667/Tssr markers

TAG: nomenload-6-0-10-1
DATE: 05/31/2017
STAFF: lec
CHANGES:
bin/nomenload.py : for alleles, old 'nomenMarker' was removed

TAG: nomenload-6-0-8-3
TAG: nomenload-6-0-8-2
TAG: nomenload-6-0-8-1